align fix

--- a/app/javascript/bundles/Dashboard/components/UserInfoCard/user-info-card.scss
+++ b/app/javascript/bundles/Dashboard/components/UserInfoCard/user-info-card.scss
@@ -4,6 +4,6 @@
 }
 
 .user-info-title {
-  margin-bottom: 1%;
   font-weight: 500;
+  text-align: center;
 }
